#1106 - use logtool-core to load seeds from old state logs